# LenguajesPr_C1

./: CMakeLists.txt  main.c
